# License: 5G-MAG Public License (v1.0)
# Copyright: (C) 2024-2025 British Broadcasting Corporation
# Author(s): David Waring <david.waring2@bbc.co.uk>
#            Dev Audsin <dev.audsin@bbc.co.uk>
#
# For full license terms please see the LICENSE file distributed with this
# program. If this file is missing then the license can be retrieved from
# https://drive.google.com/file/d/1cinCiA778IErENZ3JN52VFW-1ffHpx7Z/view

# Meson module fs and its functions like fs.hash_file require atleast meson 0.59.0 

project('rt-mbs-function', 'c', 'cpp', 
    version : '0.2.0',
    license : '5G-MAG Public',
    meson_version : '>= 1.4.0',
    default_options : [
        'c_std=gnu99',
        'cpp_std=gnu++20',
    ],
)

cplusplus = meson.get_compiler('cpp')
if not cplusplus.links('''#include <chrono>

int main(int argc, char *argv[])
{
  std::chrono::system_clock::time_point tmptime;
  std::chrono::parse("%Y", tmptime);
  return 0;
}
''', name: 'STL contains std::chrono::parse')
  error('std::chrono::parse function not found in STL, please use gcc 14.1 or later as the compiler')
endif

open5gs_project=subproject('open5gs', required: true)
common_shared_project=subproject('rt-common-shared', required: true)
svc_consumers_project=subproject('rt-5gc-service-consumers', required: true)

#subdir('lib')
subdir('src')

#systemd_path_cmd = find_program('systemd-path', required: false)
#if systemd_path_cmd.found()
#  subdir('systemd')
#endif

subdir('tests')
